--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -4,5 +4,6 @@ out = "out"
 libs = ["lib"]
 solc_version = "0.8.26"
 remappings = [
-    "solmate/=lib/solmate/src/"
+    "solmate/=lib/solmate/src/",
+    "forge-std/=lib/forge-std/src/"
 ]
