--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ FIREBLOCKS_VAULT_ACCOUNT_ID=0
 FIREBLOCKS_BASE_URL=https://sandbox-api.fireblocks.io
 
 # Seismic Network Configuration
-SEISMIC_RPC_URL=https://node-2.seismicdev.net/rpc
+SEISMIC_RPC_URL=https://gcp-1.seismictest.net/rpc
 SEISMIC_CHAIN_ID=5124
 
 # Deployer / Wallet Configuration
